<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEB"
    android:orientation="vertical" >
    <ImageButton
        android:id="@+id/building_image_mark"
        android:layout_height="96dp"
        android:layout_width="96dp"
        android:contentDescription="@string/temp"
        android:src="@drawable/ic_launcher"
        />
    <TextView 
        android:id="@+id/building_title"
        android:layout_height="24dp"
        android:layout_width="match_parent"
        android:text="@string/temp"
        android:layout_toRightOf="@+id/building_image_mark"
        android:textSize="18sp"
        android:textColor="#0E0D63"
        />

    <com.cucmap.mark.ScoreImage
        android:id="@+id/building_image_score"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/building_title"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/building_image_mark"
        android:scaleType="fitCenter" />

    <Button
        android:id="@+id/show_building_in_map"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_below="@+id/building_image_score"
        android:layout_toRightOf="@+id/building_image_mark"
        android:gravity="center"
        android:text="@string/map"
        android:textColor="#BD0000"
        android:textSize="12sp" 
        />
    
    <Button
        android:id="@+id/start_from_here"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_below="@+id/building_image_score"
        android:layout_toRightOf="@+id/show_building_in_map"
        android:textColor="#0030A9"
        android:textSize="12sp"
        android:text="@string/startfromhere" 
        />
    
    <Button
        android:id="@+id/goto_here_button"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_below="@+id/building_image_score"
        android:layout_toRightOf="@+id/start_from_here"
        android:textColor="#0030A9"
        android:textSize="12sp"
        android:text="@string/gotohere" 
        />
</RelativeLayout>