<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:baselineAlignedChildIndex="1"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/building_type_mark"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/temp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/building_title_text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="22sp" />

        <Button
            android:id="@+id/show_building_in_map"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bk"
            android:gravity="center"
            android:text="@string/map" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/building_descript_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/from_here_button"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bk"
            android:gravity="center"
            android:text="@string/startfromhere"
            android:textColor="#BB0106"
            android:textSize="14sp" >
        </Button>

        <Button
            android:id="@+id/goto_here_button"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_bk"
            android:gravity="center"
            android:text="@string/gotohere"
            android:textColor="#BB0106"
            android:textSize="14sp" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:orientation="vertical" >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/building_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/search"
                    android:src="@drawable/cuc_default1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/search"
                    android:src="@drawable/cuc_default2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/search"
                    android:src="@drawable/cuc_default1" />
            </LinearLayout>
        </HorizontalScrollView>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button android:id="@+id/upload_image_btn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="上传"
                />
            
            <Button android:id="@+id/download_image_btn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="下载"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>